2007-07-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/flymake.el (flymake-buildfile-dirs): Remove.
	(flymake-find-buildfile): Use locate-dominating-file.

	* vc.el (vc-delistify): Use mapconcat.
	(vc-do-command): Minor simplification.
	(vc-expand-dirs): Use push.

	* vc-mcvs.el (vc-mcvs-create-repo):
	* vc-cvs.el (vc-cvs-create-repo): Remove.

	* vc-hooks.el (vc-find-root): Fix case where `file' is the current
	directory and the root as well.

2007-07-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hooks.el (vc-default-workfile-unchanged-p): Pass a list
	instead of a file.

	* vc-hg.el (vc-hg-print-log): Deal with multiple file arguments.
	(vc-hg-registered): Replace if with when.
	(vc-hg-state): Deal with nonexistent files and handle removed files.
	(vc-hg-dir-state, vc-hg-dired-state-info): New functions.
	(vc-hg-checkout): Re-enable.
	(vc-hg-create-repo): Fix typos.
	(vc-hg-print-log): Fix for multiple files.
	(vc-hg-workfile-unchanged-p): New function.

	* vc.el: Fix typo.
	(vc-print-log): Fix call to print-log.
	(vc-default-comment-history): Likewise.
	(vc-directory-exclusion-list): Add .hg and .bzr.
	(vc-diff-internal): Pass a list instead of a file.

	* vc-mcvs.el (vc-mcvs-create-repo): Fix typos.

	* vc-bzr.el (vc-bzr-create-repo): New function.

2007-07-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-hooks.el (vc-find-root): Walk up the tree to find an existing
	`file' from which to start the search.

2007-07-19  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc-cvs.el: vc-cvs-checkin had some reference problems, now fixed.

2007-07-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (locate-dominating-file): New function.

2007-07-18  Michael Albinus  <michael.albinus@gmx.de>

	* progmodes/grep.el (grep-host-defaults-alist): New defvar.
	(grep-compute-defaults): Use it.

2007-07-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* uniquify.el: Docstring fixes.

2007-07-18  Eric S. Raymond  <esr@snark.thyrsus.com>
