@@ -1,5 +1,8 @@
 2007-07-20  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* progmodes/vera-mode.el (vera-re-search-forward)
+	(vera-re-search-backward): Remove use of store-match-data.
+
 	* progmodes/flymake.el (flymake-buildfile-dirs): Remove.
 	(flymake-find-buildfile): Use locate-dominating-file.
 
